Fix for bug 503166 (XPCStringConvert::ReadableToJSString shouldn't allocate for empty string). r/sr=jst.